fix overflow bug for real this time

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,10 @@ ol {
 }
 
 body {
+  * {
+    overflow: unset;
+
+  }
   font-family: "League Spartan";
   font-size: 1.25rem;
 
@@ -33,13 +37,10 @@ body {
   }
 
   pre {
+    overflow: scroll;
     padding: 1rem;
     font-family: "League Mono";
     font-size: 1rem;
-    overflow: scroll;
-    code {
-      overflow: scroll;
-    }
   }
 
   a {
